[tool.poetry]
name = "hy-functional"
version = "0.1.0"
description = "Functional library for Hy."
authors = ["vhqr0 <zq_cmd@163.com>"]
readme = "readme.org"
packages = [{include = "hy_functional"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.12"
hy = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
